--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -14,6 +14,10 @@ common:
 			password: 
 
 
+		mainPc:
+			mac: "90:2B:34:12:09:32"
+			ip: "192.168.1.215"
+
 	php:
 		date.timezone: Europe/Prague
 		# session.save_path: "%tempDir%/sessions"
