--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,6 +3,6 @@ copy.src.target=
 index.file=index.php
 remote.connection=misak113.avantcore.cz-0be2cc
 remote.directory=
-remote.upload=ON_SAVE
+remote.upload=MANUALLY
 run.as=REMOTE
 url=http://misak113.avantcore.cz:8081/
