--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -14,8 +14,8 @@ common:
 			password: 
 
 
-		PCs:
-			mainPc:
+		computers:
+			samuel: #Samuel
 				mac: "90:2B:34:12:09:32"
 				ip: "192.168.1.215"
 
