--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-php-phpdoc.target=C:\\Users\\misak113\\programing\\internet\\apache2.2\\own_webs\\misak113.avantcore.cz\\docs
 copy.src.files=false
 copy.src.target=
 index.file=index.php
@@ -5,4 +6,4 @@ remote.connection=misak113.avantcore.cz-0be2cc
 remote.directory=
 remote.upload=MANUALLY
 run.as=REMOTE
-url=http://misak113.avantcore.cz:8081/
+url=http://localhost/own_webs/misak113.avantcore.cz/www/
