--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,7 @@ auxiliary.org-netbeans-modules-php-phpdoc.target=C:\\Users\\misak113\\programing
 copy.src.files=false
 copy.src.target=
 index.file=index.php
-remote.connection=misak113.avantcore.cz-0be2cc
+remote.connection=missing-config
 remote.directory=
 remote.upload=MANUALLY
 run.as=REMOTE
